1、优化代码，删除老旧无用接口